force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/ks_pmj_base__ks_Meeting__c.object-meta.xml
<CustomObject>
    <label>会議</label>
    <nameField>
        <displayFormat>MGT-{0000}</displayFormat>
        <label>会議No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>