force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/fields/kaigi_zikou1__c.field-meta.xml
<CustomField>
    <fullName>kaigi_zikou1__c</fullName>
    <label>決定事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>