force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/fields/ks_pmj_base__Agenda__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Agenda__c</fullName>
    <label>アジェンダ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>