force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/fields/ks_pmj_base__Day__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Day__c</fullName>
    <label>開催日</label>
    <type>Date</type>
</CustomField>