force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/fields/ks_pmj_base__PlanedAttendance__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__PlanedAttendance__c</fullName>
    <label>参加予定者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>