force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/fields/ks_pmj_base__URL__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__URL__c</fullName>
    <label>会議URL</label>
    <type>Url</type>
</CustomField>