force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/fields/seika_1__c.field-meta.xml
<CustomField>
    <fullName>seika_1__c</fullName>
    <label>成果物・参照資料</label>
    <length>255</length>
    <type>Text</type>
</CustomField>