force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/fields/tempfile01__c.field-meta.xml
<CustomField>
    <fullName>tempfile01__c</fullName>
    <label>添付ファイル名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>