force-app/main/default/objects/ks_pmj_base__ks_Meeting__c/listViews/ks_pmj_base__All.listView-meta.xml
<ListView>
    <fullName>ks_pmj_base__All</fullName>
    <columns>NAME</columns>
    <columns>ks_pmj_base__Day__c</columns>
    <columns>ks_pmj_base__Time__c</columns>
    <columns>ks_pmj_base__Agenda__c</columns>
    <columns>seika_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>